# AI-LESSON-PLANER

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GITHUB_UPLOAD_STEPS.md  LICENSE  PRODUCTION_CHECKLIST.md  QUICK_START_GITHUB.md  README.md  README_GITHUB_UPLOAD.md  pyproject.toml  requirements.txt  setup.py  setup_env.bat  setup_env.sh  streamlit.py  upload_to_github.bat  upload_to_github.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-app.yml
.streamlit/: config.toml
docs/: CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT.md  ENHANCEMENTS.md  GITHUB_SETUP.md  MONGODB_TROUBLESHOOTING.md  PROJECT_STRUCTURE.md  QUICKSTART.md  UPDATE_SOCIAL_LINKS.md
scripts/: run.py
src/: __init__.py
src/config/: __init__.py  settings.py
src/utils/: __init__.py  export.py  llm.py
